@@ -1,3 +1,8 @@
+2010-11-12  Marc Khouzam  <marc.khouzam@ericsson.com>
+
+	* mi/mi-main.c (mi_cmd_target_detach): Accept new
+	thread-group id format.
+
 2010-11-12  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* spu-tdep.c (spu_catch_start): Fix compilation error typo.
